@@ -32,6 +32,9 @@ opsi-winst/opsi-script (4.12.0.16) stable; urgency=low
   * new boolean function isConfidential(<str>)  for testing
   * initvars in CreateAndProcessScript ; hopefully fixes errors on restart modified scripts
   * redesign of origin detection
+  * osfuncwin2: reimplementation of getProfileImagePathfromSid
+         https://forum.opsi.org/viewtopic.php?f=7&t=9941
+  * osfuncwin2: reimplementation of  delUserProfile
 
 -- Detlef Oertel <d.oertel@uib.de>  Wed, 14 Mar 2018:15:00:00 +0200
 
